--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -5,6 +5,7 @@
   <title>Редагування розкладу</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://yehormovchan.github.io/static/script.js"></script>
+  <link rel="stylesheet" href="https://yehormovchan.github.io/static/iframe-styles.css">
   <script>
     $(document).ready(function() {
       var subjects = [];
