--- a/iframe-content/student/parent.html
+++ b/iframe-content/student/parent.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://yehormovchan.github.io/static/script.js"></script>
+    <link rel="stylesheet" href="https://yehormovchan.github.io/static/iframe-styles.css">
     <script>
         $(document).ready(function() {
             let urlParams = new URLSearchParams(window.location.search);
@@ -113,21 +114,6 @@
             });
         });
     </script>
-        <style>
-            body{
-                overflow-y: auto; 
-                overflow-x: auto;
-            }
-            body::-webkit-scrollbar{
-                display: inline;
-                background-color: rgb(150, 170, 202);
-                border-radius: 5px;
-            }
-            body::-webkit-scrollbar-thumb{
-                background-color: rgb(93, 143, 209);
-                border-radius: 5px;
-            }
-        </style>
 </head>
 <body>
     <div class="wrapper">
