--- a/iframe-content/student/transactions.html
+++ b/iframe-content/student/transactions.html
@@ -69,22 +69,7 @@
             }
         });
     </script>
-    <style>
-        body{
-            overflow-y: auto; 
-            overflow-x: auto;
-            margin: 50px;
-        }
-        body::-webkit-scrollbar{
-            display: inline;
-            background-color: rgb(150, 170, 202);
-            border-radius: 5px;
-        }
-        body::-webkit-scrollbar-thumb{
-            background-color: rgb(93, 143, 209);
-            border-radius: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://yehormovchan.github.io/static/iframe-styles.css">
 </head>
 <body>
     <div class="wrapper">
