--- a/iframe-content/staff/staff-schedule.html
+++ b/iframe-content/staff/staff-schedule.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Розклад вчителя</title>
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
+    <link rel="stylesheet" href="https://yehormovchan.github.io/static/iframe-styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
