--- a/iframe-content/staff/staff.html
+++ b/iframe-content/staff/staff.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://yehormovchan.github.io/static/script.js"></script>
-    
+    <link rel="stylesheet" href="https://yehormovchan.github.io/static/iframe-styles.css">
 </head>
 <body>
     <h1 id="teacher-name"></h1>
