--- a/iframe-content/student/student-schedule.html
+++ b/iframe-content/student/student-schedule.html
@@ -6,6 +6,7 @@
     <title>Розклад класу</title>
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://yehormovchan.github.io/static/iframe-styles.css">
 </head>
 <body>
     <table>
