--- a/iframe-content/staff-list.html
+++ b/iframe-content/staff-list.html
@@ -40,7 +40,7 @@
                         <a href="https://yehormovchan.github.io/iframe-content/staff/staff.html?id=${emp.id}">
                             <li>
                                 <span>
-                                    <strong>${emp.name}</strong> - ${emp.position} | Зарплата: ${emp.payment} грн
+                                    <strong>${emp.name}</strong>
                                 </span>
                              </li>
                          </a>
