add group schedule

--- a/iframe-content/group-list.html
+++ b/iframe-content/group-list.html
@@ -19,7 +19,7 @@
                 
                     data.forEach(group => {
                         container.append(`
-                                <a href="club-details.html?id=${group.id}">
+                                <a href="https://yehormovchan.github.io/iframe-content/groups/group?id=${group.id}">
                                     <li>
                                         <span><strong>${group.name} </strong>| ${group.leader}</span>
                                     </li>
