--- a/iframe-content/groups/group.html
+++ b/iframe-content/groups/group.html
@@ -33,9 +33,17 @@
     </div>
 
 
+    <div class="accordion-block">
+        <div class="accordion-header">Розклад гуртка</div>
+        <iframe id="schedule" src="" frameborder="0" class="addition-block"></iframe>
+    </div>
+
     <script>
         let groupId = new URLSearchParams(window.location.search).get('id');
         let leaderId;
+
+        $("#schedule").attr("src", `https://yehormovchan.github.io/iframe-content/groups/group-schedule.html?id=${groupId}`);
+
         $.getJSON(`http://localhost:8080/view/groups-type/${groupId}`, (data)=>{
             $("#group-name").text(data.name);
             $("#group-leader").text(data.leader);
