add posibillity to add and delete kids in groups

--- a/iframe-content/staff-list.html
+++ b/iframe-content/staff-list.html
@@ -18,7 +18,7 @@
             <option value="teachers">Вчителі</option>
             <option value="staff">Інші працівники</option>
         </select>
-    </div>
+    </div><br>
     <div id="employees-list" class="item-list">
         <div class="loader"></div>
         <div class="request-error">Сталася помилка, спробуйте пізніше.</div>
