program little fix

--- a/iframe-content/programs/program.html
+++ b/iframe-content/programs/program.html
@@ -14,18 +14,18 @@
         <div class="general">
             <div class="loader general-loader"></div>
             <div class="general-request-error request-error">Сталася помилка, спробуйте пізніше.</div>
-            <span><strong>Ціна:</strong> <span id="group-price"></span></span>
-            <span><span id="group-info"></span></span>
+            <span><strong>Ціна:</strong> <span id="program-price"></span></span>
+            <span><span id="program-info"></span></span>
             <button id="edit-program-button">Редагувати інформацію</button>
         </div>
     </div>
     <div id="edit-program-modal" class="modal hidden">
         <div class="edit-wrapper wrapper">
                 <h2>Редагування програми</h2>
-                <label>Назва: <input type="text" id="edit-group-name"></label><br>
-                <label>Вартість: <input type="number" id="edit-group-price"></label><br>
+                <label>Назва: <input type="text" id="edit-program-name"></label><br>
+                <label>Вартість: <input type="number" id="edit-program-price"></label><br>
                 <label>Причина зміни вартості: <input type="text" name="" id=""></label>
-                <label>Інформація про програму: <textarea type="date" id="edit-group-info"></textarea></label><br>
+                <label>Інформація про програму: <textarea type="date" id="edit-program-info"></textarea></label><br>
                 <button id="save-edit-program">Зберегти</button><br>
                 <button onclick="$('#edit-program-modal').fadeOut()">Закрити</button>
         </div>
@@ -34,6 +34,11 @@
 
     <script>
         let programId = new URLSearchParams(window.location.search).get('id');
+
+
+        $("#edit-program-button").click(()=>{
+            $("#edit-program-modal").fadeIn();
+        });
 
         $.getJSON(`http://localhost:8080/view/program-types/${programId}`, (data)=>{
             $("#program-name").text(data.name);
@@ -53,12 +58,12 @@
 
         $("#save-edit-program").click(()=>{
             let program={
-                name: $("#edit-group-name").val(),
-                info: $("#edit-group-info").val(),
+                name: $("#edit-program-name").val(),
+                info: $("#edit-program-info").val(),
             }
             let price = {
-                price: $("#edit-group-price").val(),
-                reason: $("#edit-group-price-reason").val(),
+                price: $("#edit-program-price").val(),
+                reason: $("#edit-program-price-reason").val(),
                 to: new Date().toISOString()
             }
             $.ajax({
