--- a/iframe-content/programs/program.html
+++ b/iframe-content/programs/program.html
@@ -34,7 +34,7 @@
 
     <script>
         let programId = new URLSearchParams(window.location.search).get('id');
-
+        let oldPrice;
 
         $("#edit-program-button").click(()=>{
             $("#edit-program-modal").fadeIn();
@@ -48,6 +48,7 @@
             $("#edit-program-name").val(data.name);
             $("#edit-program-price").val(data.price);
             $("#edit-program-info").val(data.info);
+            oldPrice = data.price;
 
             $(".general-loader").hide();
         }).fail(()=>{
@@ -62,25 +63,32 @@
                 info: $("#edit-program-info").val(),
             }
             let price = {
+                program: programId,
                 price: $("#edit-program-price").val(),
                 reason: $("#edit-program-price-reason").val(),
                 to: new Date().toISOString()
             }
+            
             $.ajax({
-                url: `http://localhost:8080/program-types/update/${programId}`,
-                method: 'post',
+                url: `http://localhost:8080/program-types/${programId}`,
+                method: 'put',
                 contentType: 'application/json',
                 data: JSON.stringify(program),
                 success:()=>{
-                    $.ajax({
-                    url: `http://localhost:8080/program-price/update/${programId}`,
-                    method: 'post',
-                    contentType: 'application/json',
-                    data: JSON.stringify(price),
-                    success:()=>{
+                    if(oldPrice != price.price){
+                        $.ajax({
+                        url: `http://localhost:8080/program-price/${programId}`,
+                        method: 'put',
+                        contentType: 'application/json',
+                        data: JSON.stringify(price),
+                        success:()=>{
+                            location.reload();
+                            }
+                        });
+                    }
+                    else{
                         location.reload();
-                        }
-                    });
+                    }
                 }
             });
            
