--- a/iframe-content/program-list.html
+++ b/iframe-content/program-list.html
@@ -11,7 +11,7 @@
     <script>
         $(document).ready(function() {
             $.ajax({
-                url: "http://localhost:8080/programstype",
+                url: "http://localhost:8080/program-types",
                 method: 'get',
                 dataType: 'json',
                 success:(data)=>{
