add iframe-styles where need

--- a/iframe-content/groups/group-schedule.html
+++ b/iframe-content/groups/group-schedule.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
     <script src="https://yehormovchan.github.io/static/script.js"></script>
+    <link rel="stylesheet" href="https://yehormovchan.github.io/static/iframe-styles.css">
 </head>
 <body>
     <button id="addSchedule">Додати новий запис</button>
