--- a/iframe-content/programs/program-members.html
+++ b/iframe-content/programs/program-members.html
@@ -7,6 +7,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
     <script src="https://yehormovchan.github.io/static/script.js"></script>
+    <link rel="stylesheet" href="https://yehormovchan.github.io/static/iframe-styles.css">
+
 </head>
 <body>
     <div class="filter-menu">
