--- a/iframe-content/kid-list.html
+++ b/iframe-content/kid-list.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="modal hidden" id="add-entity-modal">
-        <div class="wrapper create-wrapper">
+        <div class="wrapper edit-wrapper">
             <label>Ім'я учня: <input type="text" id="add-kid-name"></label><br>
             <label>Клас: <input number="text" min="1" max="11" id="add-kid-grade"></label><br>
             <label>Дата народження: <input type="date" id="add-kid-birthday"></label><br>
