add possible to add and delete clubs

--- a/iframe-content/groups/group.html
+++ b/iframe-content/groups/group.html
@@ -42,6 +42,18 @@
         <iframe id="members" src="" frameborder="0" class="addition-block"></iframe>
     </div>
 
+    <div class="delete-button-container">
+        <button class="delete-button" onclick="$('#delete-entity-modal').fadeIn()">Видалити гурток</button>
+    </div>
+
+    <div class="modal hidden" id="delete-entity-modal">
+        <div class="edit-wrapper wrapper">
+            <span><strong>Ви впевнені, що хочете видалити гурток? Ця дія видалить усі пов'язані з ним дані.</strong></span>
+            <button id="delete-entity">Так</button>
+            <button onclick="$('#delete-entity-modal').fadeOut()">Ні</button>
+        </div>
+    </div>
+
     <script>
         let groupId = new URLSearchParams(window.location.search).get('id');
         let leaderId;
@@ -85,12 +97,21 @@
                 leader: $("#leader-list").val()
             }
             $.ajax({
-                url: `http://localhost:8080/groups-type/update/${groupId}`,
-                method: 'post',
+                url: `http://localhost:8080/groups-type/${groupId}`,
+                method: 'put',
                 contentType: 'application/json',
                 data: JSON.stringify(newData),
                 success:()=>{
                     location.reload();
+                }
+            });
+        });
+        $("#delete-entity").click(()=>{
+            $.ajax({
+                url: `http://localhost:8080/groups-type/${groupId}`,
+                method: 'delete',
+                success:()=>{
+                    window.location.href = "https://yehormovchan.github.io/iframe-content/groups/group-list.html";
                 }
             });
         });
