--- a/iframe-content/programs/program.html
+++ b/iframe-content/programs/program.html
@@ -53,6 +53,18 @@
         </div>
     </div>
 
+    <div class="delete-button-container">
+        <button class="delete-button" onclick="$('#delete-entity-modal').fadeIn()">Видалити програму навчання</button>
+    </div>
+
+    <div class="modal hidden" id="delete-entity-modal">
+        <div class="edit-wrapper wrapper">
+            <span><strong>Ви впевнені, що хочете видалити програму навчання? Ця дія видалить усі пов'язані з нею дані.</strong></span>
+            <button id="delete-entity">Так</button>
+            <button onclick="$('#delete-entity-modal').fadeOut()">Ні</button>
+        </div>
+    </div>
+
     <script>
         const programId = new URLSearchParams(window.location.search).get('id');
         let oldPrice;
@@ -134,6 +146,16 @@
                 }
             });
            
+
+            $("delete-entity").click(()=>{
+                $.ajax({
+                    url: `http://localhost:8080/programs-type/${programId}`,
+                    method: 'delete',
+                    success:()=>{
+                        window.location.href = "https://yehormovchan.github.io/iframe-content/program-list.html";
+                    }
+                });
+            });
         });
     </script>
 </body>
