--- a/iframe-content/programs/program.html
+++ b/iframe-content/programs/program.html
@@ -147,7 +147,7 @@
             });
            
 
-            $("delete-entity").click(()=>{
+            $("#delete-entity").click(()=>{
                 $.ajax({
                     url: `http://localhost:8080/programs-type/${programId}`,
                     method: 'delete',
