--- a/iframe-content/programs/program.html
+++ b/iframe-content/programs/program.html
@@ -74,7 +74,7 @@
             $("#edit-program-modal").fadeIn();
         });
 
-        $.getJSON(`http://localhost:8080/view/program-types/${programId}`, (data)=>{
+        $.getJSON(`http://localhost:8080/view/programs-type/${programId}`, (data)=>{
             $("#program-name").text(data.name);
             $("#program-price").text(data.price);
             $("#program-info").text(data.info);
@@ -92,7 +92,7 @@
         });
 
         $("#open-history").click(()=>{
-            $.getJSON(`http://localhost:8080/program-price/history/${programId}`, (data)=>{
+            $.getJSON(`http://localhost:8080/programs-price/history/${programId}`, (data)=>{
                 let table = $("#price-history table");
                 table.find("tr:gt(0)").remove();
                 data.forEach(price=>{
@@ -124,14 +124,14 @@
             }
             
             $.ajax({
-                url: `http://localhost:8080/program-types/${programId}`,
+                url: `http://localhost:8080/programs-type/${programId}`,
                 method: 'put',
                 contentType: 'application/json',
                 data: JSON.stringify(program),
                 success:()=>{
                     if(oldPrice != price.price){
                         $.ajax({
-                        url: `http://localhost:8080/program-price/${priceId}`,
+                        url: `http://localhost:8080/programs-price/${priceId}`,
                         method: 'put',
                         contentType: 'application/json',
                         data: JSON.stringify(price),
