--- a/iframe-content/program-list.html
+++ b/iframe-content/program-list.html
@@ -63,6 +63,9 @@
                         data: JSON.stringify(price),
                         success:()=>{
                             location.reload();
+                        },
+                        complete:()=>{
+                            location.reload();
                         }
                     })
                 }
