--- a/iframe-content/kid-list.html
+++ b/iframe-content/kid-list.html
@@ -24,7 +24,9 @@
             <button class="add-button" onclick="$('#add-entity-modal').fadeIn()">+ Додати</button>
         </div>
    </div>
-    
+   <div class="side-menu">
+        <button>Додати оплату</button>
+    </div>
     <div id="students-list" class="item-list">
         <div class="loader"></div>
         <div class="request-error">Сталася помилка, спробуйте пізніше.</div>
