create add transaction modal, fix some links

--- a/iframe-content/student/transactions.html
+++ b/iframe-content/student/transactions.html
@@ -23,7 +23,7 @@
                 let toDate = $("#to-date").val();
                 let transactionType = $("#transaction-type").val();
                 
-                $.getJSON(`http://localhost:8080/view/transactions/${kidId}`, function(data) {
+                $.getJSON(`http://localhost:8080/view/transaction/${kidId}`, function(data) {
                     $(".request-error").hide()
                     let filteredData = data.filter(transaction => {
                         let date = new Date(transaction.date);
@@ -41,7 +41,7 @@
             }
 
             function loadTransactionTypes() {
-                $.getJSON("http://localhost:8080/transactiontypes", function(types) {
+                $.getJSON("http://localhost:8080/transactions-type", function(types) {
                     $(".request-error").hide()
                     let select = $("#transaction-type");
                     select.append('<option value="">Усі</option>');
