--- a/iframe-content/kid-list.html
+++ b/iframe-content/kid-list.html
@@ -25,7 +25,7 @@
         </div>
    </div>
    <div class="side-menu">
-        <button>Додати оплату</button>
+        <button onclick="$(`#create-transaction`).fadeIn()">Додати оплату</button>
     </div>
     <div id="students-list" class="item-list">
         <div class="loader"></div>
@@ -97,11 +97,24 @@
             <button onclick="$('#edit-parent-form').fadeOut()">Закрити</button>
         </div>
     </div>
+
+    <div class="modal hidden" id="create-transaction">
+        <div class="wrapper edit-wrapper">
+            <h2>Додати оплату</h2>
+            <label>Дитина: <select id="transaction-kid"></select></label> <br>
+            <label>Сума: <input type="number" id="transaction-sum"></label><br>
+            <label>Дата: <input type="date" id="transaction-date"></label><br>
+            <label>Тип оплати: <select id="transaction-type"></select></label><br>
+            <label>Квитанція: <input type="file" id="transaction-receipt"></label><br>
+            <button id="save-transaction">Зберегти</button>
+            <button onclick="$('#create-transaction').fadeOut()">Закрити</button>
+        </div>
+    </div>
 </body>
 
 <script>
      $.ajax({
-        url: "http://localhost:8080/program-types",
+        url: "http://localhost:8080/programs-type",
         method: 'get',
         dataType: 'json',
         success:(data)=>{
@@ -111,6 +124,45 @@
             });
         }
     })
+
+    $("#save-transaction").click(()=>{
+        const transaction = {
+            kid: $("#transaction-kid").val(),
+            sum: $("#transaction-sum").val(),
+            date: $("#transaction-date").val(),
+            type: $("#transaction-type").val()
+        }
+        let formData = new FormData();
+        formData.append("transaction", new Blob([JSON.stringify(transaction)], { type: "application/json"}));
+        let receipt = $("#transaction-receipt")[0].files[0];
+        if(receipt){
+            let blob = new Blob([receipt], {type: receipt.type});
+            formData.append("receipt", blob, receipt.name);
+        }
+        else{
+            formData.append("receipt", new Blob([null], {type: "application/json"}), "empty");
+        }
+        $.ajax({
+            url: "http://localhost:8080/transaction",
+            method: "POST",
+            contentType: false,
+            data: formData,
+            cache : false,
+            processData: false,
+            success: ()=> {
+                location.reload();
+            }
+        });
+    })
+
+
+    $.getJSON("http://localhost:8080/transactions-type", (data)=>{
+        let select = $("#transaction-type");
+        data.forEach(type => {
+            select.append(`<option value="${type.id}">${type.name}</option>`);
+        });
+    }) 
+
 
     $.ajax({
         url: "http://localhost:8080/kid",
@@ -128,10 +180,12 @@
             });
             
             let container = $("#students-list");
+            let transactionKidSelect = $("#transaction-kid");
             
             Object.keys(studentsByGrade).sort((a, b) => a - b).forEach(grade => {
                 container.append(`<h2>Клас ${grade}</h2><ul class='item-list' id='grade-${grade}'></ul>`);
                 studentsByGrade[grade].forEach(student => {
+                    transactionKidSelect.append(`<option value="${student.id}">${student.name}</option>`);
                     $(`#grade-${grade}`).append(`<a href="https://yehormovchan.github.io/iframe-content/student/kid.html?id=`+student.id+`"><li><span><strong>${student.name}</strong> (${student.id})</span></li></a>`);
                 });
             });
@@ -195,7 +249,7 @@
         function addProgram(kidId){
             let program = {
                 kid: kidId,
-                programType: $("#program-list").val(),
+                programType: $("#programs-list").val(),
                 from: new Date().toISOString()
             }
             $.ajax({
