--- a/iframe-content/student/group-attendance.html
+++ b/iframe-content/student/group-attendance.html
@@ -23,7 +23,7 @@
                 let from = `${year}-${m}-01`;
                 let to = `${year}-${m}-${new Date(year, m, 0).getDate()}`;
                 
-                $.getJSON(`http://localhost:8080/view/group/${kidId}`, function(groups) {
+                $.getJSON(`http://localhost:8080/view/group/kid=${kidId}`, function(groups) {
                     $.getJSON(`http://localhost:8080/view/attendance/group/${kidId}/${from}/${to}`, function(attendance) {
                         $(".request-error").hide()
                         let {dates, days} = getMonthDates(month);
