add sign-in button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="#programs-type" onclick="changePage(this)">Програми навчання</a></li>
                 </ul>
             </nav>
+            <button class="sign-in">Увійти</button>
         </header>
         
         <main>
